Prevent horizontal scroll because of buttons component

--- a/web/css/layout/_pagebuilder.less
+++ b/web/css/layout/_pagebuilder.less
@@ -91,6 +91,7 @@
 
     [data-content-type="buttons"] {
         display: flex;
+        flex-wrap: wrap;
         gap: @4;
 
         &[data-appearance="stacked"] {
